# starlette-fastapi-spa-serve

./: README.md  app.py  pyproject.toml
frontend/: index.html  main.js
