[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Ross Masters <ross.masters@lendable.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
